data/all_generated_tests/raw_wast_tests/if_ImproperFunctionCallorReturnHandling_1837.wast
;; 8. **Indirect Function Call with Dynamic Type Checking**:    - Test Description: Perform an indirect function call within an `if` instruction with dynamic type checking ensuring the table index correctly resolves.    - Relevant Constraint: Validates dynamic type integrity and indirect call resolution during control flow within `if`.    - Improper Handling Scenario: `wizard_engine` may incorrectly perform type checking or table lookups, leading to erroneous indirect calls.

(assert_invalid
  (module
    (func $type-indirect-call-conditional (param i32) (result i32)
      (if (result i32)
        (i32.const 1)
        (then 
          (call_indirect (type 0) (local.get 0) (i32.const 1))
        )
        (else
          (i32.const 0)
        )
      )
    )
    (table 1 funcref)
    (type (func (param i32) (result i32)))
  )
  "type mismatch"
)